Added pause scene

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <script src = "./lib/phaser.js"></script>
     <script src="./src/firstScene.js"></script>
+    <script src="./src/pauseScene.js"></script>
     <script src="./src/main.js"></script>
 </body>
 </html>
