Added all scenes

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <script src = "./lib/phaser.js"></script>
     <script src="./src/firstScene.js"></script>
     <script src="./src/pauseScene.js"></script>
+    <script src="./src/deadScene.js"></script>
+    <script src="./src/winScene.js"></script>
     <script src="./src/main.js"></script>
 </body>
 </html>
